# CPlasmas

./: .gitignore  .projectile  CMakeLists.txt  Makefile  Plasmas.sln
CMake/: FindSDL2_image.cmake
Engine/: Base.h  CMakeLists.txt  Component.h  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  Entity.cpp  Entity.h  EventSystem.cpp  EventSystem.h  Graphics.cpp  Graphics.h  ImageDraw.cpp  ImageDraw.h  Key.h  Makefile  SDLEventsSystem.cpp  SDLEventsSystem.h  SDLGraphics.cpp  SDLGraphics.h  SDLWindow.cpp  SDLWindow.h  Sprite.h  SubSystem.cpp  SubSystem.h  Window.cpp  Window.h  _BaseTypes.h  _Errors.cpp  _Errors.h  _ExportUtil.h  _Selector.cpp  _Selector.h  cmake_install.cmake
Engine/include/: Base.h  Component.h  Engine.h  Entity.h  EventSystem.h  Graphics.h  Image.h  ImageDraw.h  Key.h  SDLEventsSystem.h  SDLGraphics.h  SDLImage.h  SDLWindow.h  SubSystem.h  Window.h  _BaseTypes.h  _Errors.h  _ExportUtil.h  _SDLInclude.h  _SDLUtils.h  _Selector.h
Engine/include/SDL/: SDLGraphics.h  SDLImage.h  SDLWindow.h
Engine/src/: Entity.cpp  EventSystem.cpp  Graphics.cpp  Image.cpp  ImageDraw.cpp  SDLEventsSystem.cpp  SDLGraphics.cpp  SDLImage.cpp  SDLWindow.cpp  SubSystem.cpp  Window.cpp  _Errors.cpp  _Selector.cpp
Engine/src/SDL/: SDLEventsSystem.cpp  SDLGraphics.cpp  SDLImage.cpp  SDLWindow.cpp
Plasmas/: BoxEntity.h  CMakeLists.txt  Main.cpp  Makefile  Plasmas.vcxproj  Plasmas.vcxproj.filters  cmake_install.cmake
Plasmas/include/: BoxEntity.h  BoxEntity.hpp  StrawberryEntity.hpp
Plasmas/src/: BoxEntity.cpp  Main.cpp  StrawberryEntity.cpp
